--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vuepic/vue-datepicker": "^3.4.8",
     "core-js": "^3.8.3",
+    "idb": "^7.0.2",
     "vue": "^3.2.13",
     "vue-router": "^4.1.5"
   },
