--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@vuepic/vue-datepicker": "^3.4.8",
     "core-js": "^3.8.3",
+    "install": "^0.13.0",
+    "localbase": "^0.7.5",
     "vue": "^3.2.13",
     "vue-router": "^4.1.5"
   },
