--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vuepic/vue-datepicker": "^3.4.8",
     "core-js": "^3.8.3",
+    "indexeddb": "^0.0.0",
     "install": "^0.13.0",
     "localbase": "^0.7.5",
     "vue": "^3.2.13",
